# workbench

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  reinstall.sh  workbench-plan.md
.claude/commands/: dev-install.md  edit-config.md  emacs-engineer.md  reinstall.md
Workbench.app/Contents/: Info.plist
Workbench.app/Contents/MacOS/: workbench-launcher
elisp/: workbench.el
src/workbench/: cli.py  github.py  state.py  status.py  tui.py  worktree.py
src/workbench/tools/: __init__.py  ai_agent.py  base.py  ide.py  pr_viewer.py  terminal.py  vcs_client.py
workbench/: state.py  worktree.py
