[build-system]
requires = ["setuptools>=68.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "workbench"
version = "0.1.0"
description = "CLI worktree manager with integrated tool launchers"
requires-python = ">=3.10"
dependencies = [
    "textual>=0.80.0",
    "typer>=0.12.0",
]

[project.scripts]
workbench = "workbench.cli:app"
